# qiikzx-gsraviole-apatch

./: .gitignore  .gitlab-ci.yml  .gitmodules  Android.bp  BUILD.bazel  Kbuild  Kconfig  Makefile  Makefile.ext_modules.slider  bigo.c  bigo_pm.c  bigo_prioq.c  bigo_prioq.h  bigo_priv.h  build.config.cloudripper  build.config.gs101  build.config.slider  build_slider.sh  goog_touch_interface.c  goog_touch_interface.h  goog_touch_interface_nop.h  hall_sensor.c  lwis_device.c  lwis_ioctl.c  lwis_periodic_io.c  lwis_transaction.c  touch_bus_negotiator.c  touch_bus_negotiator.h  touch_offload.c  touch_offload.h  ufdt_convert.c  ufdt_overlay.c  ufdt_prop_dict.c  vendor_boot_modules.slider  vendor_dlkm.blocklist.slider
alsa/: aoc_alsa.h  aoc_alsa_hw.c  aoc_alsa_pcm.c
arch/: Kconfig
block/: Makefile  ssg-iosched.c
drivers/: Kconfig
fs/: Makefile  exec.c  namei.c  open.c  proc_namespace.c  read_write.c  readdir.c  stat.c  susfs.c
google-devices/: Makefile
google-modules/: Makefile  google-modules-conf.h  google-modules.conf
init/: Kconfig
kernel/: Makefile  exit.c  smp.c  sys.c  sysctl.c
lib/: Kconfig.debug
mali_kbase/: Kbuild  Kconfig  Makefile  Mconfig  build.bp  mali_kbase_config.h  mali_kbase_config_defaults.h  mali_kbase_defs.h  mali_kbase_mem.c
mali_pixel/: Kbuild  memory_group_manager.c  pixel_slc.c  pixel_slc.h
mm/: Makefile  internal.h  oom_kill.c  page_alloc.c  vmscan.c
samsung/: exynos_drm_bts.c  exynos_drm_connector.c  exynos_drm_crtc.c  exynos_drm_debug.c  exynos_drm_decon.c  exynos_drm_decon.h  exynos_drm_dpp.c  exynos_drm_dqe.c  (+6 more)
(+319 files in other folders)
